--- a/tacker/db/migration/alembic.ini
+++ b/tacker/db/migration/alembic.ini
@@ -11,7 +11,7 @@ script_location = %(here)s/alembic
 # the 'revision' command, regardless of autogenerate
 # revision_environment = false
 
-# default to an empty string because the Neutron migration cli will
+# default to an empty string because the Tacker migration cli will
 # extract the correct value and set it programatically before alemic is fully
 # invoked.
 sqlalchemy.url =
