upate files under etc for tacker

--- a/etc/tacker/rootwrap.conf
+++ b/etc/tacker/rootwrap.conf
@@ -1,10 +1,10 @@
-# Configuration for neutron-rootwrap
+# Configuration for tacker-rootwrap
 # This file should be owned by (and only-writeable by) the root user
 
 [DEFAULT]
 # List of directories to load filter definitions from (separated by ',').
 # These directories MUST all be only writeable by root !
-filters_path=/etc/neutron/rootwrap.d,/usr/share/neutron/rootwrap
+filters_path=/etc/tacker/rootwrap.d,/usr/share/tacker/rootwrap
 
 # List of directories to search executables in, in case filters do not
 # explicitely specify a full path (separated by ',')
