--- a/etc/tacker/tacker.conf
+++ b/etc/tacker/tacker.conf
@@ -5,9 +5,9 @@
 # Print debugging output (set logging level to DEBUG instead of default WARNING level).
 # debug = False
 
-# Where to store Neutron state files.  This directory must be writable by the
+# Where to store Tacker state files.  This directory must be writable by the
 # user executing the agent.
-# state_path = /var/lib/neutron
+# state_path = /var/lib/tacker
 
 # Where to store lock files
 lock_path = $state_path/lock
@@ -35,18 +35,18 @@ lock_path = $state_path/lock
 # bind_host = 0.0.0.0
 
 # Port the bind the API server to
-# bind_port = 9696
+# bind_port = 8888
 
 # Path to the extensions.  Note that this can be a colon-separated list of
 # paths.  For example:
 # api_extensions_path = extensions:/path/to/more/extensions:/even/more/extensions
-# The __path__ of neutron.extensions is appended to this, so if your
+# The __path__ of tacker.extensions is appended to this, so if your
 # extensions are in there you don't need to specify them here
 # api_extensions_path =
 
-# (StrOpt) Neutron core plugin entrypoint to be loaded from the
-# neutron.core_plugins namespace. See setup.cfg for the entrypoint names of the
-# plugins included in the neutron source distribution. For compatibility with
+# (StrOpt) Tacker core plugin entrypoint to be loaded from the
+# tacker.core_plugins namespace. See setup.cfg for the entrypoint names of the
+# plugins included in the tacker source distribution. For compatibility with
 # previous versions, the class name of a plugin can be specified instead of its
 # entrypoint name.
 #
@@ -54,8 +54,8 @@ lock_path = $state_path/lock
 # Example: core_plugin = ml2
 
 # (ListOpt) List of service plugin entrypoints to be loaded from the
-# neutron.service_plugins namespace. See setup.cfg for the entrypoint names of
-# the plugins included in the neutron source distribution. For compatibility
+# tacker.service_plugins namespace. See setup.cfg for the entrypoint names of
+# the plugins included in the tacker source distribution. For compatibility
 # with previous versions, the class name of a plugin can be specified instead
 # of its entrypoint name.
 #
@@ -94,7 +94,7 @@ lock_path = $state_path/lock
 # Enable or disable sorting
 # allow_sorting = False
 # Enable or disable overlapping IPs for subnets
-# Attention: the following parameter MUST be set to False if Neutron is
+# Attention: the following parameter MUST be set to False if Tacker is
 # being used in conjunction with nova security groups
 # allow_overlapping_ips = False
 # Ensure that configured gateway is on subnet
@@ -103,7 +103,7 @@ lock_path = $state_path/lock
 
 # RPC configuration options. Defined in rpc __init__
 # The messaging module to use, defaults to kombu.
-# rpc_backend = neutron.openstack.common.rpc.impl_kombu
+# rpc_backend = tacker.openstack.common.rpc.impl_kombu
 # Size of RPC thread pool
 # rpc_thread_pool_size = 64
 # Size of RPC connection pool
@@ -114,9 +114,9 @@ lock_path = $state_path/lock
 # rpc_cast_timeout = 30
 # Modules of exceptions that are permitted to be recreated
 # upon receiving exception data from an rpc call.
-# allowed_rpc_exception_modules = neutron.openstack.common.exception, nova.exception
+# allowed_rpc_exception_modules = tacker.openstack.common.exception, nova.exception
 # AMQP exchange to connect to if using RabbitMQ or QPID
-# control_exchange = neutron
+# control_exchange = tacker
 
 # If passed, use a fake RabbitMQ provider
 # fake_rabbit = False
@@ -154,7 +154,7 @@ lock_path = $state_path/lock
 # rabbit_ha_queues = false
 
 # QPID
-# rpc_backend=neutron.openstack.common.rpc.impl_qpid
+# rpc_backend=tacker.openstack.common.rpc.impl_qpid
 # Qpid broker hostname
 # qpid_hostname = localhost
 # Qpid broker port
@@ -176,7 +176,7 @@ lock_path = $state_path/lock
 # qpid_tcp_nodelay = True
 
 # ZMQ
-# rpc_backend=neutron.openstack.common.rpc.impl_zmq
+# rpc_backend=tacker.openstack.common.rpc.impl_zmq
 # ZeroMQ bind address. Should be a wildcard (*), an ethernet interface, or IP.
 # The "host" option should point or resolve to this address.
 # rpc_zmq_bind_address = *
@@ -190,11 +190,11 @@ lock_path = $state_path/lock
 
 # Notification_driver can be defined multiple times
 # Do nothing driver
-# notification_driver = neutron.openstack.common.notifier.no_op_notifier
+# notification_driver = tacker.openstack.common.notifier.no_op_notifier
 # Logging driver
-# notification_driver = neutron.openstack.common.notifier.log_notifier
+# notification_driver = tacker.openstack.common.notifier.log_notifier
 # RPC driver.
-notification_driver = neutron.openstack.common.notifier.rpc_notifier
+notification_driver = tacker.openstack.common.notifier.rpc_notifier
 
 # default_notification_level is used to form actual topic name(s) or to set logging level
 # default_notification_level = INFO
@@ -231,19 +231,19 @@ notification_driver = neutron.openstack.common.notifier.rpc_notifier
 
 # =========== items for agent scheduler extension =============
 # Driver to use for scheduling network to DHCP agent
-# network_scheduler_driver = neutron.scheduler.dhcp_agent_scheduler.ChanceScheduler
+# network_scheduler_driver = tacker.scheduler.dhcp_agent_scheduler.ChanceScheduler
 # Driver to use for scheduling router to a default L3 agent
-# router_scheduler_driver = neutron.scheduler.l3_agent_scheduler.ChanceScheduler
+# router_scheduler_driver = tacker.scheduler.l3_agent_scheduler.ChanceScheduler
 # Driver to use for scheduling a loadbalancer pool to an lbaas agent
-# loadbalancer_pool_scheduler_driver = neutron.services.loadbalancer.agent_scheduler.ChanceScheduler
+# loadbalancer_pool_scheduler_driver = tacker.services.loadbalancer.agent_scheduler.ChanceScheduler
 
 # Allow auto scheduling networks to DHCP agent. It will schedule non-hosted
 # networks to first DHCP agent which sends get_active_networks message to
-# neutron server
+# tacker server
 # network_auto_schedule = True
 
 # Allow auto scheduling routers to L3 agent. It will schedule non-hosted
-# routers to first L3 agent which sends sync_routers message to neutron server
+# routers to first L3 agent which sends sync_routers message to tacker server
 # router_auto_schedule = True
 
 # Number of DHCP agents scheduled to host a network. This enables redundant
@@ -295,7 +295,7 @@ notification_driver = neutron.openstack.common.notifier.rpc_notifier
 # ======== end of WSGI parameters related to the API server ==========
 
 
-# ======== neutron nova interactions ==========
+# ======== tacker nova interactions ==========
 # Send notification to nova when port status is active.
 # notify_nova_on_port_status_changes = True
 
@@ -330,11 +330,11 @@ notification_driver = neutron.openstack.common.notifier.rpc_notifier
 # Number of seconds between sending events to nova if there are any events to send
 # send_events_interval = 2
 
-# ======== end of neutron nova interactions ==========
+# ======== end of tacker nova interactions ==========
 
 [quotas]
 # Default driver to use for quota checks
-# quota_driver = neutron.db.quota_db.DbQuotaDriver
+# quota_driver = tacker.db.quota_db.DbQuotaDriver
 
 # Resource name(s) that are supported in quota features
 # quota_items = network,subnet,port
@@ -386,7 +386,7 @@ notification_driver = neutron.openstack.common.notifier.rpc_notifier
 # quota_floatingip = 50
 
 [agent]
-# Use "sudo neutron-rootwrap /etc/neutron/rootwrap.conf" to use the real
+# Use "sudo tacker-rootwrap /etc/tacker/rootwrap.conf" to use the real
 # root filter facility.
 # Change to "sudo" to skip the filtering and just run the comand directly
 # root_helper = sudo
@@ -409,9 +409,9 @@ admin_password = %SERVICE_PASSWORD%
 [database]
 # This line MUST be changed to actually run the plugin.
 # Example:
-# connection = mysql://root:pass@127.0.0.1:3306/neutron
+# connection = mysql://root:pass@127.0.0.1:3306/tacker
 # Replace 127.0.0.1 above with the IP address of the database used by the
-# main neutron server. (Leave it as is if the database runs on this host.)
+# main tacker server. (Leave it as is if the database runs on this host.)
 # connection = sqlite://
 # NOTE: In deployment the [database] section and its connection attribute may
 # be set in the corresponding core plugin '.ini' file. However, it is suggested
@@ -465,15 +465,59 @@ admin_password = %SERVICE_PASSWORD%
 # example of non-default provider:
 # service_provider=FIREWALL:name2:firewall_driver_path
 # --- Reference implementations ---
-service_provider=LOADBALANCER:Haproxy:neutron.services.loadbalancer.drivers.haproxy.plugin_driver.HaproxyOnHostPluginDriver:default
-service_provider=VPN:openswan:neutron.services.vpn.service_drivers.ipsec.IPsecVPNDriver:default
+service_provider=LOADBALANCER:Haproxy:tacker.services.loadbalancer.drivers.haproxy.plugin_driver.HaproxyOnHostPluginDriver:default
+#service_provider=VPN:openswan:tacker.services.vpn.service_drivers.ipsec.IPsecVPNDriver:default
 # In order to activate Radware's lbaas driver you need to uncomment the next line.
 # If you want to keep the HA Proxy as the default lbaas driver, remove the attribute default from the line below.
 # Otherwise comment the HA Proxy line
-# service_provider = LOADBALANCER:Radware:neutron.services.loadbalancer.drivers.radware.driver.LoadBalancerDriver:default
+# service_provider = LOADBALANCER:Radware:tacker.services.loadbalancer.drivers.radware.driver.LoadBalancerDriver:default
 # uncomment the following line to make the 'netscaler' LBaaS provider available.
-# service_provider=LOADBALANCER:NetScaler:neutron.services.loadbalancer.drivers.netscaler.netscaler_driver.NetScalerPluginDriver
+# service_provider=LOADBALANCER:NetScaler:tacker.services.loadbalancer.drivers.netscaler.netscaler_driver.NetScalerPluginDriver
 # Uncomment the following line (and comment out the OpenSwan VPN line) to enable Cisco's VPN driver.
-# service_provider=VPN:cisco:neutron.services.vpn.service_drivers.cisco_ipsec.CiscoCsrIPsecVPNDriver:default
+# service_provider=VPN:cisco:tacker.services.vpn.service_drivers.cisco_ipsec.CiscoCsrIPsecVPNDriver:default
 # Uncomment the line below to use Embrane heleos as Load Balancer service provider.
-# service_provider=LOADBALANCER:Embrane:neutron.services.loadbalancer.drivers.embrane.driver.EmbraneLbaas:default
+# service_provider=LOADBALANCER:Embrane:tacker.services.loadbalancer.drivers.embrane.driver.EmbraneLbaas:default
+# Uncomment the following line to make nova vm based lbaas driver
+# service_provider = LOADBALANCER:HostingDevice:tacker.services.loadbalancer.drivers.hosting_device.plugin_driver.HostingDevicePluginDriver:default
+
+[servicevm]
+# Specify drivers for hosting device
+# exmpale: device_driver = noop
+# exmpale: device_driver = nova
+device_driver = nova
+
+# Specify drivers for mgmt
+# exmpale: mgmt_driver = noop
+mgmt_driver = noop
+
+[servicevm_nova]
+# parameters for novaclient to talk to nova
+#project_id =
+#auth_url =
+#user_name =
+#api_key =
+#ca_file =
+#insecure =
+
+project_id = admin
+auth_url = http://198.175.107.121:5000/v2.0
+user_name = admin
+api_key = admin-password
+
+[servicevm_agent]
+# VM agent requires that an interface driver be set. Choose the one that best
+# matches your plugin.
+# interface_driver =
+
+# Example of interface_driver option for OVS based plugins (OVS, Ryu, NEC)
+# that supports L3 agent
+# interface_driver = tacker.agent.linux.interface.OVSInterfaceDriver
+
+# Use veth for an OVS interface or not.
+# Support kernels with limited namespace support
+# (e.g. RHEL 6.5) so long as ovs_use_veth is set to True.
+# ovs_use_veth = False
+
+# Allow overlapping IP (Must have kernel build with CONFIG_NET_NS=y and
+# iproute2 package that supports namespaces).
+# use_namespaces = True
