--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [metadata]
-name = neutron
+name = tacker
 version = 2014.2
-summary = OpenStack Networking
+summary = OpenStack servicevm/device manager
 description-file =
     README.rst
 author = OpenStack
@@ -20,162 +20,41 @@ classifier =
 
 [files]
 packages =
-    neutron
+    tacker
 data_files =
-    etc/neutron =
+    etc/tacker =
         etc/api-paste.ini
-        etc/dhcp_agent.ini
-        etc/fwaas_driver.ini
-        etc/l3_agent.ini
-        etc/lbaas_agent.ini
-        etc/metadata_agent.ini
-        etc/metering_agent.ini
         etc/policy.json
-        etc/neutron.conf
+        etc/tacker.conf
         etc/rootwrap.conf
-        etc/vpn_agent.ini
-    etc/neutron/rootwrap.d =
-        etc/neutron/rootwrap.d/debug.filters
-        etc/neutron/rootwrap.d/dhcp.filters
-        etc/neutron/rootwrap.d/iptables-firewall.filters
-        etc/neutron/rootwrap.d/l3.filters
-        etc/neutron/rootwrap.d/lbaas-haproxy.filters
-        etc/neutron/rootwrap.d/linuxbridge-plugin.filters
-        etc/neutron/rootwrap.d/nec-plugin.filters
-        etc/neutron/rootwrap.d/openvswitch-plugin.filters
-        etc/neutron/rootwrap.d/ryu-plugin.filters
-        etc/neutron/rootwrap.d/vpnaas.filters
-    etc/init.d = etc/init.d/neutron-server
-    etc/neutron/plugins/bigswitch =
-        etc/neutron/plugins/bigswitch/restproxy.ini
-        etc/neutron/plugins/bigswitch/ssl/ca_certs/README
-        etc/neutron/plugins/bigswitch/ssl/host_certs/README
-    etc/neutron/plugins/brocade = etc/neutron/plugins/brocade/brocade.ini
-    etc/neutron/plugins/cisco =
-        etc/neutron/plugins/cisco/cisco_plugins.ini
-        etc/neutron/plugins/cisco/cisco_vpn_agent.ini
-    etc/neutron/plugins/embrane = etc/neutron/plugins/embrane/heleos_conf.ini
-    etc/neutron/plugins/hyperv = etc/neutron/plugins/hyperv/hyperv_neutron_plugin.ini
-    etc/neutron/plugins/ibm = etc/neutron/plugins/ibm/sdnve_neutron_plugin.ini
-    etc/neutron/plugins/linuxbridge = etc/neutron/plugins/linuxbridge/linuxbridge_conf.ini
-    etc/neutron/plugins/metaplugin = etc/neutron/plugins/metaplugin/metaplugin.ini
-    etc/neutron/plugins/midonet = etc/neutron/plugins/midonet/midonet.ini
-    etc/neutron/plugins/ml2 =
-        etc/neutron/plugins/bigswitch/restproxy.ini
-        etc/neutron/plugins/ml2/ml2_conf.ini
-        etc/neutron/plugins/ml2/ml2_conf_arista.ini
-        etc/neutron/plugins/ml2/ml2_conf_brocade.ini
-        etc/neutron/plugins/ml2/ml2_conf_cisco.ini
-        etc/neutron/plugins/ml2/ml2_conf_mlnx.ini
-        etc/neutron/plugins/ml2/ml2_conf_ncs.ini
-        etc/neutron/plugins/ml2/ml2_conf_odl.ini
-        etc/neutron/plugins/ml2/ml2_conf_ofa.ini
-        etc/neutron/plugins/ml2/ml2_conf_fslsdn.ini
-    etc/neutron/plugins/mlnx = etc/neutron/plugins/mlnx/mlnx_conf.ini
-    etc/neutron/plugins/nec = etc/neutron/plugins/nec/nec.ini
-    etc/neutron/plugins/nuage = etc/neutron/plugins/nuage/nuage_plugin.ini
-    etc/neutron/plugins/oneconvergence = etc/neutron/plugins/oneconvergence/nvsdplugin.ini
-    etc/neutron/plugins/openvswitch = etc/neutron/plugins/openvswitch/ovs_neutron_plugin.ini
-    etc/neutron/plugins/plumgrid = etc/neutron/plugins/plumgrid/plumgrid.ini
-    etc/neutron/plugins/ryu = etc/neutron/plugins/ryu/ryu.ini
-    etc/neutron/plugins/vmware = etc/neutron/plugins/vmware/nsx.ini
-scripts =
-    bin/neutron-rootwrap
-    bin/neutron-rootwrap-xen-dom0
+    etc/rootwrap.d =
+        etc/tacker/rootwrap.d/servicevm.filters
+    etc/init.d = etc/init.d/tacker-server
 
 [global]
 setup-hooks =
     pbr.hooks.setup_hook
-    neutron.hooks.setup_hook
+    tacker.hooks.setup_hook
 
 [entry_points]
 console_scripts =
-    neutron-check-nsx-config = neutron.plugins.vmware.check_nsx_config:main
-    neutron-db-manage = neutron.db.migration.cli:main
-    neutron-debug = neutron.debug.shell:main
-    neutron-dhcp-agent = neutron.agent.dhcp_agent:main
-    neutron-hyperv-agent = neutron.plugins.hyperv.agent.hyperv_neutron_agent:main
-    neutron-ibm-agent = neutron.plugins.ibm.agent.sdnve_neutron_agent:main
-    neutron-l3-agent = neutron.agent.l3_agent:main
-    neutron-lbaas-agent = neutron.services.loadbalancer.agent.agent:main
-    neutron-linuxbridge-agent = neutron.plugins.linuxbridge.agent.linuxbridge_neutron_agent:main
-    neutron-metadata-agent = neutron.agent.metadata.agent:main
-    neutron-mlnx-agent = neutron.plugins.mlnx.agent.eswitch_neutron_agent:main
-    neutron-nec-agent = neutron.plugins.nec.agent.nec_neutron_agent:main
-    neutron-netns-cleanup = neutron.agent.netns_cleanup_util:main
-    neutron-ns-metadata-proxy = neutron.agent.metadata.namespace_proxy:main
-    neutron-nsx-manage = neutron.plugins.vmware.shell:main
-    neutron-nvsd-agent = neutron.plugins.oneconvergence.agent.nvsd_neutron_agent:main
-    neutron-openvswitch-agent = neutron.plugins.openvswitch.agent.ovs_neutron_agent:main
-    neutron-ovs-cleanup = neutron.agent.ovs_cleanup_util:main
-    neutron-restproxy-agent = neutron.plugins.bigswitch.agent.restproxy_agent:main
-    neutron-ryu-agent = neutron.plugins.ryu.agent.ryu_neutron_agent:main
-    neutron-server = neutron.server:main
-    neutron-rootwrap = oslo.rootwrap.cmd:main
-    neutron-usage-audit = neutron.cmd.usage_audit:main
-    neutron-vpn-agent = neutron.services.vpn.agent:main
-    neutron-metering-agent = neutron.services.metering.agents.metering_agent:main
-    neutron-ofagent-agent = ryu.cmd.ofa_neutron_agent:main
-    neutron-sanity-check = neutron.cmd.sanity_check:main
-neutron.core_plugins =
-    bigswitch = neutron.plugins.bigswitch.plugin:NeutronRestProxyV2
-    brocade = neutron.plugins.brocade.NeutronPlugin:BrocadePluginV2
-    cisco = neutron.plugins.cisco.network_plugin:PluginV2
-    embrane = neutron.plugins.embrane.plugins.embrane_ovs_plugin:EmbraneOvsPlugin
-    hyperv = neutron.plugins.hyperv.hyperv_neutron_plugin:HyperVNeutronPlugin
-    ibm = neutron.plugins.ibm.sdnve_neutron_plugin:SdnvePluginV2
-    linuxbridge = neutron.plugins.linuxbridge.lb_neutron_plugin:LinuxBridgePluginV2
-    midonet = neutron.plugins.midonet.plugin:MidonetPluginV2
-    ml2 = neutron.plugins.ml2.plugin:Ml2Plugin
-    mlnx = neutron.plugins.mlnx.mlnx_plugin:MellanoxEswitchPlugin
-    nec = neutron.plugins.nec.nec_plugin:NECPluginV2
-    nuage = neutron.plugins.nuage.plugin:NuagePlugin
-    metaplugin = neutron.plugins.metaplugin.meta_neutron_plugin:MetaPluginV2
-    oneconvergence = neutron.plugins.oneconvergence.plugin.OneConvergencePluginV2
-    openvswitch = neutron.plugins.openvswitch.ovs_neutron_plugin:OVSNeutronPluginV2
-    plumgrid = neutron.plugins.plumgrid.plumgrid_plugin.plumgrid_plugin:NeutronPluginPLUMgridV2
-    ryu = neutron.plugins.ryu.ryu_neutron_plugin:RyuNeutronPluginV2
-    vmware = neutron.plugins.vmware.plugin:NsxPlugin
-neutron.service_plugins =
-    dummy = neutron.tests.unit.dummy_plugin:DummyServicePlugin
-    router = neutron.services.l3_router.l3_router_plugin:L3RouterPlugin
-    firewall = neutron.services.firewall.fwaas_plugin:FirewallPlugin
-    lbaas = neutron.services.loadbalancer.plugin:LoadBalancerPlugin
-    vpnaas = neutron.services.vpn.plugin:VPNDriverPlugin
-    metering = neutron.services.metering.metering_plugin:MeteringPlugin
-neutron.ml2.type_drivers =
-    flat = neutron.plugins.ml2.drivers.type_flat:FlatTypeDriver
-    local = neutron.plugins.ml2.drivers.type_local:LocalTypeDriver
-    vlan = neutron.plugins.ml2.drivers.type_vlan:VlanTypeDriver
-    gre = neutron.plugins.ml2.drivers.type_gre:GreTypeDriver
-    vxlan = neutron.plugins.ml2.drivers.type_vxlan:VxlanTypeDriver
-neutron.ml2.mechanism_drivers =
-    opendaylight = neutron.plugins.ml2.drivers.mechanism_odl:OpenDaylightMechanismDriver
-    logger = neutron.tests.unit.ml2.drivers.mechanism_logger:LoggerMechanismDriver
-    test = neutron.tests.unit.ml2.drivers.mechanism_test:TestMechanismDriver
-    bulkless = neutron.tests.unit.ml2.drivers.mechanism_bulkless:BulklessMechanismDriver
-    linuxbridge = neutron.plugins.ml2.drivers.mech_linuxbridge:LinuxbridgeMechanismDriver
-    openvswitch = neutron.plugins.ml2.drivers.mech_openvswitch:OpenvswitchMechanismDriver
-    hyperv = neutron.plugins.ml2.drivers.mech_hyperv:HypervMechanismDriver
-    ncs = neutron.plugins.ml2.drivers.mechanism_ncs:NCSMechanismDriver
-    arista = neutron.plugins.ml2.drivers.mech_arista.mechanism_arista:AristaDriver
-    cisco_nexus = neutron.plugins.ml2.drivers.cisco.nexus.mech_cisco_nexus:CiscoNexusMechanismDriver
-    cisco_apic = neutron.plugins.ml2.drivers.cisco.apic.mechanism_apic:APICMechanismDriver
-    l2population = neutron.plugins.ml2.drivers.l2pop.mech_driver:L2populationMechanismDriver
-    bigswitch = neutron.plugins.ml2.drivers.mech_bigswitch.driver:BigSwitchMechanismDriver
-    ofagent = neutron.plugins.ml2.drivers.mech_ofagent:OfagentMechanismDriver
-    mlnx = neutron.plugins.ml2.drivers.mlnx.mech_mlnx:MlnxMechanismDriver
-    brocade = neutron.plugins.ml2.drivers.brocade.mechanism_brocade:BrocadeMechanism
-    fslsdn = neutron.plugins.ml2.drivers.mechanism_fslsdn:FslsdnMechanismDriver
-neutron.openstack.common.cache.backends =
-    memory = neutron.openstack.common.cache._backends.memory:MemoryBackend
-# These are for backwards compat with Icehouse notification_driver configuration values
-oslo.messaging.notify.drivers =
-    neutron.openstack.common.notifier.log_notifier = oslo.messaging.notify._impl_log:LogDriver
-    neutron.openstack.common.notifier.no_op_notifier = oslo.messaging.notify._impl_noop:NoOpDriver
-    neutron.openstack.common.notifier.rpc_notifier2 = oslo.messaging.notify._impl_messaging:MessagingV2Driver
-    neutron.openstack.common.notifier.rpc_notifier = oslo.messaging.notify._impl_messaging:MessagingDriver
-    neutron.openstack.common.notifier.test_notifier = oslo.messaging.notify._impl_test:TestDriver
+    tacker-db-manage = tacker.db.migration.cli:main
+    tacker-server = tacker.cmd.server:main
+    tacker-rootwrap = oslo.rootwrap.cmd:main
+    tacker-servicevm-rpc-proxy-agent = tacker.vm.agent.agent:main
+    tacker-servicevm-ns-rpc-proxy = tacker.vm.agent.namespace_proxy:main
+tacker.service_plugins =
+    dummy = tacker.tests.unit.dummy_plugin:DummyServicePlugin
+    servicevm = tacker.vm.plugin.ServiceVMPlugin
+tacker.openstack.common.cache.backends =
+    memory = tacker.openstack.common.cache._backends.memory:MemoryBackend
+tacker.servicevm.device.drivers =
+    noop = tacker.tests.unit.services.vm.drivers.noop:DeviceNoop
+    nova = tacker.vm.drivers.nova.nova:DeviceNova
+tacker.servicevm.mgmt.drivers =
+    noop = tacker.tests.unit.services.vm.mgmt_drivers.noop:DeviceMgmtNoop
+    agent_rpc = tacker.vm.mgmt_drivers.rpc.rpc:AgentRpcMGMTDriver
+    agent_proxy = tacker.vm.mgmt_drivers.rpc.proxy:AgentRpcProxyMGMTDriver
 
 
 [build_sphinx]
@@ -186,16 +65,16 @@ source-dir = doc/source
 [extract_messages]
 keywords = _ gettext ngettext l_ lazy_gettext
 mapping_file = babel.cfg
-output_file = neutron/locale/neutron.pot
+output_file = tacker/locale/tacker.pot
 
 [compile_catalog]
-directory = neutron/locale
-domain = neutron
+directory = tacker/locale
+domain = tacker
 
 [update_catalog]
-domain = neutron
-output_dir = neutron/locale
-input_file = neutron/locale/neutron.pot
+domain = tacker
+output_dir = tacker/locale
+input_file = tacker/locale/tacker.pot
 
 [wheel]
 universal = 1
